--- a/promtail/promtail.yaml
+++ b/promtail/promtail.yaml
@@ -4,12 +4,10 @@ server:
   log_level: debug
 
 positions:
-  filename: /tmp/positions.yaml
+  filename: /etc/promtail/positions.yaml
 
 clients:
-  # Make sure this env-var resolves to
-  #   http://127.0.0.1:3100/loki/api/v1/push
-  - url: ${LOKI_PUSH_URL}
+  - url: http://loki:3100/loki/api/v1/push
 
 scrape_configs:
   - job_name: fail2ban
@@ -24,15 +22,16 @@ scrape_configs:
           max_wait_time: 3s
       - regex:
           expression: '^(?P<time>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}),\d+\s+fail2ban\.(?P<component>\S+)\s+\[(?P<pid>\d+)\]:\s+(?P<level>\S+)(?:\s+\[(?P<jail>[^\]]+)\])?\s+(?P<msg>.*)$'
-
       - timestamp:
           source: time
-          format: "2006-01-02 15:04:05"
-          location: Local # or "UTC" if the machine runs UTC
+          format: '2006-01-02 15:04:05'
+          location: Local
       - labels:
+          time: time
           component: component
           pid: pid
           level: level
           jail: jail
+          msg: msg
       - output:
           source: msg
