--- a/.github/workflows/deploy-to-droplet.yml
+++ b/.github/workflows/deploy-to-droplet.yml
@@ -61,7 +61,7 @@ jobs:
             echo ">>> Deployment to Droplet finished successfully!"
           EOF
 
-  notify-github:
+notify-github:
     name: Smart GitHub Issue Management - CD Failures
     needs: [deploy]
     runs-on: ubuntu-latest
@@ -76,16 +76,11 @@ jobs:
       - name: Compute deployment status
         id: compute_status
         run: |
-          if [ "${{ needs.deploy.result }}" == "success" ]; then
-            echo "status=✅ SUCCESS" >> "$GITHUB_OUTPUT"
-          else
-            echo "status=❌ FAILED"  >> "$GITHUB_OUTPUT"
-          fi
+          echo "status=❌ FAILED" >> "$GITHUB_OUTPUT"
 
       - name: Search for existing CD deployment issues
         id: search_issues
         run: |
-          # Search for open issues with specific labels for this branch and workflow
           SEARCH_QUERY="repo:${{ github.repository }} is:issue is:open label:cd-deployment label:${{ github.ref_name }} label:${{ github.workflow }}"
 
           echo "Searching for existing issues with query: $SEARCH_QUERY"
@@ -241,9 +236,10 @@ jobs:
             ${{ github.event_name }},
             ${{ github.workflow }}
 
+  # Segundo job: cierra issues cuando el deployment es exitoso
   close-resolved-issues:
     name: Close Resolved Deployment Issues
-    needs: [deploy]
+    needs: [deploy, notify-github]
     runs-on: ubuntu-latest
     if: always() && needs.deploy.result == 'success'
     permissions:
@@ -252,7 +248,6 @@ jobs:
     steps:
       - name: Search and close resolved CD deployment issues
         run: |
-          # Search for open issues with specific labels for this branch and workflow
           SEARCH_QUERY="repo:${{ github.repository }} is:issue is:open label:cd-deployment label:${{ github.ref_name }} label:${{ github.workflow }}"
 
           echo "Searching for resolved issues with query: $SEARCH_QUERY"
