Update: add comment to clarify issue verification test in workflow

--- a/.github/workflows/deploy-to-droplet.yml
+++ b/.github/workflows/deploy-to-droplet.yml
@@ -8,6 +8,8 @@ on:
       - develop
       - feature/*
 
+      #Test para verificar funcion de Issues
+
 jobs:
   deploy:
     name: Deploy Application to DigitalOcean Droplet
