--- a/.github/workflows/deploy-to-droplet.yml
+++ b/.github/workflows/deploy-to-droplet.yml
@@ -1,11 +1,12 @@
 name: CD Deploy to Droplet
 
-# Se activa cuando hay un push a la rama 'develop'
-# Cambia 'develop' a 'main' o la rama que uses para desplegar
+# Se activa cuando hay un push a las ramas 'develop' o 'feature/auth'
+# Cambia estas ramas según tus necesidades de deployment
 on:
   push:
     branches:
       - develop
+      - feature/auth
 
 jobs:
   deploy:
@@ -24,21 +25,26 @@ jobs:
       - name: Deploy to Droplet via SSH
         run: |
           echo "Connecting to Droplet: ${{ secrets.DROPLET_IP }}"
+          echo "Deploying branch: ${{ github.ref_name }}"
           # El comando SSH. -o StrictHostKeyChecking=no es para evitar el prompt de confirmación del host la primera vez.
           # Considera añadir la huella del host a los known_hosts del runner para mayor seguridad en producción.
           ssh -o StrictHostKeyChecking=no -p ${{ secrets.DROPLET_SSH_PORT || 22 }} \
             ${{ secrets.DROPLET_SSH_USER }}@${{ secrets.DROPLET_IP }} << 'EOF'
 
+            # Obtener la rama que disparó el workflow
+            DEPLOY_BRANCH="${{ github.ref_name }}"
+            echo ">>> Deploying from branch: $DEPLOY_BRANCH"
+
             echo ">>> Navigating to project directory: ${{ secrets.PROJECT_PATH_ON_DROPLET }}"
             cd ${{ secrets.PROJECT_PATH_ON_DROPLET }} || { echo "Failed to cd into project directory"; exit 1; }
 
-            echo ">>> Ensuring current branch is correct (develop) and pulling latest changes..."
+            echo ">>> Ensuring current branch is correct ($DEPLOY_BRANCH) and pulling latest changes..."
             CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-            if [ "$CURRENT_BRANCH" != "develop" ]; then
-              echo "Warning: Not on develop branch, currently on $CURRENT_BRANCH. Attempting to switch."
-              git checkout develop || { echo "Failed to checkout develop branch"; exit 1; }
+            if [ "$CURRENT_BRANCH" != "$DEPLOY_BRANCH" ]; then
+              echo "Warning: Not on $DEPLOY_BRANCH branch, currently on $CURRENT_BRANCH. Attempting to switch."
+              git checkout $DEPLOY_BRANCH || { echo "Failed to checkout $DEPLOY_BRANCH branch"; exit 1; }
             fi
-            git pull origin develop || { echo "Failed to pull changes"; exit 1; }
+            git pull origin $DEPLOY_BRANCH || { echo "Failed to pull changes from $DEPLOY_BRANCH"; exit 1; }
 
             echo ">>> Updating and restarting Docker services..."
             # Paso 1: Descargar imágenes base actualizadas (opcional si usas tags fijos)
