--- a/.github/workflows/deploy-to-droplet.yml
+++ b/.github/workflows/deploy-to-droplet.yml
@@ -1,39 +1,57 @@
 name: CD Deploy to Droplet
 
-# Se activa cuando hay un push a las ramas 'develop' o 'feature/auth'
-# Cambia estas ramas según tus necesidades de deployment
+# Se activa cuando hay un push a las ramas permitidas
 on:
   push:
     branches:
       - develop
       - feature/auth
+      - main  # Agrega todas las ramas desde las que quieres poder activar
 
 jobs:
   deploy:
     name: Deploy Application to DigitalOcean Droplet
-    runs-on: ubuntu-latest # El tipo de máquina virtual que usará GitHub Actions para ejecutar el job
+    runs-on: ubuntu-latest
 
     steps:
-      # Paso 1: No necesitamos hacer checkout del código en el runner de GitHub Actions
-      # porque todos los comandos se ejecutarán remotamente en el Droplet.
+      - name: Validate and Set Deployment Branch
+        run: |
+          echo "🚀 DEPLOYMENT CONFIGURATION:"
+          echo "📝 Triggered from branch: ${{ github.ref_name }}"
+          echo "🎯 Target deployment branch: ${{ secrets.DEPLOY_BRANCH_NAME }}"
+          
+          # Validar que el secret existe
+          if [ -z "${{ secrets.DEPLOY_BRANCH_NAME }}" ]; then
+            echo "❌ Error: DEPLOY_BRANCH_NAME secret is not configured"
+            exit 1
+          fi
+          
+          # Mostrar información del deployment
+          echo "✅ Will deploy branch: ${{ secrets.DEPLOY_BRANCH_NAME }}"
+          echo "🖥️  To droplet: ${{ secrets.DROPLET_IP }}"
+          echo "================================"
 
       - name: Setup SSH Agent
-        uses: webfactory/ssh-agent@v0.9.0 # Acción para configurar el agente SSH
+        uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.DROPLET_SSH_PRIVATE_KEY }} # Usa la clave privada del secret
+          ssh-private-key: ${{ secrets.DROPLET_SSH_PRIVATE_KEY }}
 
       - name: Deploy to Droplet via SSH
         run: |
           echo "Connecting to Droplet: ${{ secrets.DROPLET_IP }}"
-          echo "Deploying branch: ${{ github.ref_name }}"
-          # El comando SSH. -o StrictHostKeyChecking=no es para evitar el prompt de confirmación del host la primera vez.
-          # Considera añadir la huella del host a los known_hosts del runner para mayor seguridad en producción.
+          echo "Triggered from branch: ${{ github.ref_name }}"
+          echo "Deploying branch: ${{ secrets.DEPLOY_BRANCH_NAME }}"
+          
           ssh -o StrictHostKeyChecking=no -p ${{ secrets.DROPLET_SSH_PORT || 22 }} \
             ${{ secrets.DROPLET_SSH_USER }}@${{ secrets.DROPLET_IP }} << 'EOF'
 
-            # Obtener la rama que disparó el workflow
-            DEPLOY_BRANCH="${{ github.ref_name }}"
-            echo ">>> Deploying from branch: $DEPLOY_BRANCH"
+            # Usar la rama del secret en lugar de la rama que disparó el workflow
+            DEPLOY_BRANCH="${{ secrets.DEPLOY_BRANCH_NAME }}"
+            TRIGGERED_FROM="${{ github.ref_name }}"
+            
+            echo ">>> Deployment Information:"
+            echo ">>> Triggered from branch: $TRIGGERED_FROM"
+            echo ">>> Deploying branch: $DEPLOY_BRANCH"
 
             echo ">>> Navigating to project directory: ${{ secrets.PROJECT_PATH_ON_DROPLET }}"
             cd ${{ secrets.PROJECT_PATH_ON_DROPLET }} || { echo "Failed to cd into project directory"; exit 1; }
@@ -47,21 +65,9 @@ jobs:
             git pull origin $DEPLOY_BRANCH || { echo "Failed to pull changes from $DEPLOY_BRANCH"; exit 1; }
 
             echo ">>> Updating and restarting Docker services..."
-            # Paso 1: Descargar imágenes base actualizadas (opcional si usas tags fijos)
             docker compose pull || echo "Docker compose pull failed, continuing..."
-
-            # Paso 2: Reconstruir la imagen de la API y levantar todos los servicios
-            # --build: Reconstruye servicios con una sección 'build' si su contexto cambió (tu API)
-            # --force-recreate: Asegura que los contenedores se recreen, útil para cambios de config o imagen
-            # --remove-orphans: Limpia contenedores de servicios que ya no existen en el docker-compose.yaml
             docker compose up -d --build --force-recreate --remove-orphans || { echo "Docker compose up failed"; exit 1; }
 
-            echo ">>> (Optional) Pruning unused Docker resources..."
-            # Descomenta las siguientes líneas si quieres una limpieza más profunda
-            # echo "Pruning unused Docker images..."
-            # docker image prune -af || echo "Image prune failed, continuing..."
-            # echo "Pruning Docker build cache..."
-            # docker builder prune -af || echo "Builder prune failed, continuing..."
-
             echo ">>> Deployment to Droplet finished successfully!"
+            echo ">>> Deployed branch: $DEPLOY_BRANCH (triggered from: $TRIGGERED_FROM)"
           EOF
