--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,10 +1,13 @@
-fastapi==0.95.1
+fastapi[all]==0.95.1
 uvicorn[standard]==0.22.0
 httpx==0.24.0
 python-dotenv==1.0.0
 pydantic==1.10.11
 jinja2==3.1.4
 websockets>=10.0
+motor==3.4.0
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
 
 #For testing
 pytest==8.3.5
