Add: tests for auth; Update: tests

--- a/api/pytest.ini
+++ b/api/pytest.ini
@@ -1,18 +1,22 @@
 [tool:pytest]
 asyncio_mode = auto
 testpaths = tests
-python_files = test_*.py
+python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
 addopts = 
     -v 
     --tb=short 
     --strict-markers
+    --asyncio-mode=auto
     --disable-warnings
-    --cov=.
-    --cov-report=term-missing
-    --cov-report=html
-    --cov-report=json
 markers =
-    asyncio: marks tests as async (deactivate with '-m "not asyncio"')
-    slow: marks tests as slow (deactivate with '-m "not slow"')
+    asyncio: marks tests as async
+    slow: marks tests as slow
+    integration: marks tests as integration tests
+    unit: marks tests as unit tests
+    auth: tests relacionados con autenticación
+    admin: tests que requieren permisos de administrador
+    api: tests de endpoints de API
+    service: tests de servicios
+    controller: tests de controladores
