--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,17 +1,33 @@
-fastapi[all]==0.95.1
-uvicorn[standard]==0.22.0
-httpx==0.24.0
-python-dotenv==1.0.0
-pydantic==1.10.11
-jinja2==3.1.4
-websockets>=10.0
-motor==3.7.1
-passlib[bcrypt]==1.7.4
-python-jose[cryptography]==3.5.0
-python-dateutil==2.8.2
+#fastapi[all]==0.95.1
+#uvicorn[standard]==0.22.0
+#httpx==0.24.0
+#python-dotenv==1.0.0
+#pydantic==1.10.11
+#jinja2==3.1.4
+#websockets>=10.03
+#motor==3.7.1
+#passlib[bcrypt]==1.7.4
+#python-jose[cryptography]==3.5.0
+#python-dateutil==2.8.2
 
 #For testing
-pytest==8.3.5
-pytest-asyncio==0.26.0
-coverage==7.6.9
-pytest-cov==6.0.0
+#pytest==8.3.5
+#pytest-asyncio==0.26.0
+#coverage==7.6.9
+#pytest-cov==6.0.0
+
+fastapi==0.103.2
+pydantic==1.10.12
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+pymongo==4.6.0
+motor==3.3.2
+python-dotenv==1.0.0
+httpx==0.25.2
+
+# Dependencies para tests
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
