--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,29 +1,27 @@
-fastapi[all]==0.95.1
-uvicorn[standard]==0.22.0
-httpx==0.24.0
-python-dotenv==1.0.0
-pydantic==1.10.11
-jinja2==3.1.4
-websockets>=10.03
-motor==3.7.1
-passlib[bcrypt]==1.7.4
-python-jose[cryptography]==3.5.0
-python-dateutil==2.8.2
-
-#For testing
-pytest==8.3.5
-pytest-asyncio==0.26.0
-coverage==7.6.9
-pytest-cov==6.0.0
-
 # FastAPI y dependencias principales - versiones compatibles con Python 3.13
-#fastapi==0.110.0
-#pydantic==2.6.1
-#uvicorn[standard]==0.27.1
-#python-multipart==0.0.7
-#python-jose[cryptography]==3.3.0
-#passlib[bcrypt]==1.7.4
-#pymongo==4.6.1
+fastapi==0.115.0
+pydantic==2.10.3
+uvicorn[standard]==0.32.1
+python-multipart==0.0.20
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+pymongo==4.10.1
+motor==3.6.0
+python-dotenv==1.0.1
+httpx==0.28.1
+python-dateutil==2.8.2
+jinja2==3.1.4
+websockets>=13.0
+
+# Dependencies para tests - compatibles con Python 3.13
+pytest==8.3.4
+pytest-asyncio==0.24.0
+pytest-cov==6.0.0
+coverage==7.6.9
+
+# Dependencias adicionales para estabilidad
+typing-extensions>=4.12.0
+anyio>=4.6.0
 #motor==3.3.2
 #python-dotenv==1.0.1
 #httpx==0.26.0
