--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -5,8 +5,8 @@ uvicorn[standard]==0.32.1
 python-multipart==0.0.20
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-pymongo
-motor
+pymongo==4.6.1
+motor==3.3.2
 python-dotenv==1.0.1
 httpx==0.28.1
 python-dateutil==2.8.2
