--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -48,6 +48,7 @@ motor==3.7.1
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.5.0
 python-dateutil==2.8.2
+pyjwt
 
 #For testing
 pytest==8.3.5
